--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,14 +1,18 @@
   <!DOCTYPE html>
   <html>
     <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
       <title>web page #1!</title>
     </head>
+
+
+
     <body>
       <h1>My first Web page</h1>
       <h2>Written with the guidance of Moringa prep</h2>
 
       <P>this is my first web page!</p>
-      <p>isn`t it nice?<p/>
+      <p>isn`t it cool?<p/>
 
       <p>here are some things im going to learn about coding:</p>
       <ul>
